src/styles/global.scss
/* ... */
@media screen and (max-width: 1800px) {
  .home-cards {
    .card-content {
      min-height: 200px;
    }
  }
}

@media screen and (max-width: $desktop) {
  .home-cards {
    .card-content {
      min-height: auto;
    }
  }
}

.home-card,
.home-card figure,
.home-card img {
  border-radius: 16px;
}

.home-card-link:after {
  display: inline-block;
  //-webkit-transform: scale(0.5, 1); /* Safari and Chrome */
  //-moz-transform: scale(0.5, 1); /* Firefox */
  //-ms-transform: scale(0.5, 1); /* IE 9 */
  //-o-transform: scale(0.5, 1); /* Opera */
  transform: scale(0.5, 1); /* W3C */
  content: '\25BA';
  position: relative;
  margin-left: 2px;
}

.home-card h2 a,
.home-card h2 a:hover {
  color: $title-color !important;
}

.home-card h2 a:after {
  content: '';
}

.home-card-footer {
  padding: 15px;
  border-radius: 10px;
}

.home-card-img {
  width: 100%;
  height: auto;
  display: block;
  border: 10px solid $primary;
}

/************/
/* NEWS */
/************/

.bgee-news {
  margin: 6rem 0 8rem 0;
}

/************/
/* RESOURCE */
/************/

.bgee-resource-archive {
  margin: 6rem 0;
  .columns {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 40px;
    .column {
      width: 100%;
      background: $light-color;
      border-radius: 10px;
    }
  }
  .resource-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    .resource-logos {
      width: 100%;
      display: flex;
      justify-content: space-around;
      margin: 0 0 10px 0;
    }
    .resource-links {
      text-align: center;
      a.external-link {
        padding-right: 5px;
      }
    }
  }
}

@media screen and (max-width: $desktop) {
  .bgee-resource-archive {
    margin: 6rem 0;
    .columns {
      display: block;
      .column {
        margin: 10px 0;
      }
    }
  }
}

/**********/
/* FOOTER */
/**********/

.footer {
  padding: 40px 0 0;
  border-radius: 30px 30px 0 0;
  background: #09111c;
  .left-wrapper,
  .right-wrapper {
    display: flex;
    a:not(:first-child) {
      margin-left: 15px;
    }
  }
  a {
    color: #ffffff;
    &.image {
      position: relative;
      height: 15px;
      top: 4px;
      img {
        margin: 0;
        position: absolute;
        top: 50%;
      }
    }
  }
  .copyright {
    padding: 0 0 20px;
    // padding: 140px 0 20px;
  }
}

.nav-footer {
  display: table;
  margin: 40px auto;
  max-width: 1366px;
  line-height: 20px;
  box-sizing: border-box;
  .nav-footer-line {
    display: table-row;
    .nav-footer-col {
      display: table-cell;
      padding: 0 10px;
      .nav-footer-col-head {
        font-size: 1.2em;
        font-weight: 700;
        margin: 6px 0 14px 0;
        white-space: nowrap;
      }
      ul {
        li {
          margin: 0 0 10px;
          white-space: nowrap;
          a {
            &:hover {
              text-decoration: underline;
            }
          }
        }
      }
    }
    .nav-footer-col-spacer {
      width: 10%;
      display: table-cell;
    }
  }
}

@media screen and (max-width: $desktop) {
  .footer {
    & > div {
      flex-direction: column;
      justify-content: normal !important;
    }
    .left-wrapper,
    .right-wrapper {
      display: flex;
      flex-direction: column;
    }
    .left-wrapper a:not(:first-child) {
      margin-left: 0;
      margin-top: 10px;
    }
    .right-wrapper a {
      margin-top: 10px;
      &:not(:last-child) {
        margin-right: 0;
      }
    }
  }
  .nav-footer {
    display: flex;
    justify-content: center;
    margin: 40px auto;
    max-width: 1366px;
    line-height: 20px;
    box-sizing: border-box;
    .nav-footer-line {
      display: flex;
      flex-direction: column;
      .nav-footer-col {
        display: block;
        padding: 0 10px;
        .right-wrapper {
          flex-direction: row;
        }
      }
    }
  }
  .copyright {
    .left-wrapper {
      align-items: center;
    }
  }
  body:not(.homepage) {
    footer {
      margin: 100px 0 0;
    }
  }
}

@media screen and (max-width: $smallestscreen) {
  /* GENERAL */
  .section {
    padding: 1rem;
  }
  /* HERO */
  .home-hero-banner {
    .hero-body {
      .gene-search {
        margin: 1rem 0 !important;
      }
      .hero-data-columns {
        width: 100%;
        display: inline-block;
        .column {
          &:not(:first-child) {
            align-items: start;
            border: none;
            border-top: 1px solid $light-opacity;
          }
        }
      }
    }
  }
  /* CARDS */
  .home-cards {
    .card-content {
      h2 {
        padding: 0 0 10px;
        line-height: 2.5rem;
      }
      .content {
        a {
          display: block;
          padding: 10px 0 0;
        }
      }
    }
    .home-card-footer {
      padding-top: 0;
      .home-card-img {
        border-width: 6px;
      }
    }
  }
  /* RESOURCE AND ARCHIVE */
  .bgee-resource-archive {
    .columns {
      div {
        .archived-link {
          a {
            height: 60px;
            font: {
              size: 1.6rem;
            }
          }
        }
      }
    }
  }
}

